# gpu-raytracer

./: CMakeLists.txt  Logger.h  Makefile  README.md  Shader.cpp  main.cpp  output.ppm
include/: modular-glsl.h
shaders/: .#main.frag  colors.glsl  constants.glsl  cornell.glsl  glslmodules  intersect.glsl  main.frag  main.frag.bak  math.glsl  mesh.glsl  output.frag  pass.frag  pass.vert  pass0.frag  quaternion.glsl  random.glsl  rays_util.glsl  scene.glsl  simplex.glsl  ssbo.glsl  types.glsl  util.glsl
src/: .#main.cpp  Camera.h  Hitable.cpp  Hitable.h  Logger.h  Material.h  Ray.cpp  Ray.h  Shader.h  ShaderBuilder.cpp  ShaderBuilder.h  Sphere.cpp  Sphere.h  main.cpp  output.ppm
src/temp/: glslmodules  main.frag  main.vert
test/: .#test.cpp  test.cpp
test/res/: colors.glsl  first.glsl  glslmodules  math.glsl  pass0.frag  quaternion.glsl  random.glsl  rays_util.glsl  scene.glsl  second.glsl  structs.glsl  test  third.glsl  types.glsl  unifroms.glsl  util.glsl
